external-crates/move/crates/move-compiler/tests/move_2024/typing/macros_have_unique_scopes_unhygienic_capture_by_name_arg.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E04007]: incompatible types
   ┌─ tests/move_2024/typing/macros_have_unique_scopes_unhygienic_capture_by_name_arg.move:4:23
   │
 4 │     macro fun foo($f: u64): u64 {
   │                       ^^^
   │                       │
   │                       Invalid type annotation
   │                       Expected: 'u64'
   ·
15 │         let x = vector<u64>[];
   │                 ------------- Given: 'vector<u64>'

error[E04007]: incompatible types
   ┌─ tests/move_2024/typing/macros_have_unique_scopes_unhygienic_capture_by_name_arg.move:4:23
   │
 4 │     macro fun foo($f: u64): u64 {
   │                       ^^^
   │                       │
   │                       Invalid type annotation
   │                       Expected: 'u64'
   ·
19 │         let x = vector<u64>[];
   │                 ------------- Given: 'vector<u64>'

error[E04007]: incompatible types
   ┌─ tests/move_2024/typing/macros_have_unique_scopes_unhygienic_capture_by_name_arg.move:9:23
   │
 9 │     macro fun bar($f: u64): u64 {
   │                       ^^^
   │                       │
   │                       Invalid type annotation
   │                       Expected: 'u64'
   ·
15 │         let x = vector<u64>[];
   │                 ------------- Given: 'vector<u64>'

error[E04007]: incompatible types
   ┌─ tests/move_2024/typing/macros_have_unique_scopes_unhygienic_capture_by_name_arg.move:9:23
   │
 9 │     macro fun bar($f: u64): u64 {
   │                       ^^^
   │                       │
   │                       Invalid type annotation
   │                       Expected: 'u64'
   ·
19 │         let x = vector<u64>[];
   │                 ------------- Given: 'vector<u64>'
